--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "node": ">=8.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-    ,"start": "node stegcloak.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node stegcloak.js"
   },
   "author": "KuroLabs",
   "license": "MIT",
@@ -72,7 +72,7 @@
     "standard": "^14.3.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^4.15.1"
   },
   "standard": {
     "ignore": [
